# four-engine

./: .clang-format  .clang-tidy  .clangd  .gitignore  .gitmodules  ;  CMakeLists.txt  README.md  build.bat  build.ps1  build.sh  compile-shaders.ps1
MyApp/: CMakeLists.txt  TempImGuiLayer.hpp  main.cpp  myApp.cpp  myApp.hpp  testglfw.cpp
four-engine/: CMakeLists.txt
four-engine/src/: core.hpp  fibonachi.hpp  four-pch.cpp  four-pch.h  four-pch.hpp  four_std.cppm  log.hpp  main.cpp  sdlWindow.hpp  window.hpp
four-engine/src/camera/: camera.cpp  camera.hpp
four-engine/src/component/: component.hpp  lifespan.hpp  shape.hpp  transform.hpp
four-engine/src/core/: application.cpp  application.hpp  core.hpp  engine.cpp  engine.hpp  layer.hpp  layerStack.hpp  log.cpp  log.hpp  tempGameObj.hpp  type.hpp  utils.hpp
four-engine/src/core/imgui/: imguiLayer.cpp  imguiLayer.hpp  imguilayerstack.cpp  imguilayerstack.hpp
four-engine/src/entity/: entity.hpp
four-engine/src/event/: WindowEvent.hpp  applicationEvent.hpp  event.hpp
four-engine/src/renderer/: camera.hpp  renderer.cpp  renderer.hpp  simpleRenderSystem.cpp  simpleRenderSystem.hpp
four-engine/src/renderer/shaders/: simpleShader.frag  simpleShader.vert
four-engine/src/renderer/vulkan/: VKHelpers.cpp  VKHelpers.hpp  VKInstance.hpp  VKTypes.hpp  VulkSwapChain.cpp  vulkDevice.cpp  vulkDevice.hpp  vulkModel.cpp  vulkModel.hpp  vulkPipline.cpp  vulkPipline.hpp  vulkSwapChain.hpp  vulkanContext.cpp  vulkanContext.hpp  vulkanPipeline.cpp  vulkanPipeline.hpp  vulkanPipelineBuilder.cpp  vulkanPipelineBuilder.hpp  vulkanRenderer.cpp  vulkanRenderer.hpp
four-engine/src/scene/: scene.hpp
four-engine/src/system/: system.hpp
four-engine/src/utility/: observer.hpp
four-engine/src/window/: window.hpp
four-engine/src/window/glfw/: glfwWindow.cpp  glfwWindow.hpp
four-engine/src/window/sdl/: sdlWindow.cpp  sdlWindow.hpp
four-engine/src/window/sfml/: sfmlWindow.cpp  sfmlWindow.hpp
four-engine/test/: CMakeLists.txt  application-test.cpp  test.cpp  window-test.cpp
